bug: fixing header on mobile

--- a/src/scss/page-layout/_header-aboutMe.scss
+++ b/src/scss/page-layout/_header-aboutMe.scss
@@ -25,6 +25,9 @@
     text-align: right;
     padding: 4rem 4rem 2rem 4rem;
   }
+  @media only screen and (max-width: $bp-tiny-big) {
+    padding: 2.5rem 3rem 2rem 3rem;
+  }
   @media only screen and (max-width: $bp-tiny) {
     padding: 4rem 3rem 2rem 3rem;
   }
